# pycarto

./: .deepsource.toml  .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  license_workflow.yml  lint-and-test.yml
_demos/: fifae_regions.py  lowpoly_rendering.py
_docs/: roadmap.md
_tests/: conftest.py  test_borders.py  test_build_map.py  test_data.py  test_geom.py  test_init.py  test_svg.py
pycarto/: __init__.py  borders.py  data.py  geom.py  svg.py
