[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycarto"
version = "0.0.0"
description = "Generate region SVG maps from a list of country ISO codes."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Dylan Monfret", email = "dyl_m.dev@proton.me" },
]
keywords = ["maps", "svg", "geopandas", "cartography", "natural-earth", "iso-3166"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "geopandas>=1.1.3,<2",
    "httpxyz>=0.31.2,<1",
    "pyogrio>=0.12.1,<1",
    "shapely>=2.1.2,<3",
    "topojson>=1.10,<2",
]

[project.urls]
Homepage = "https://github.com/Dyl-M/pycarto"
Repository = "https://github.com/Dyl-M/pycarto"
Issues = "https://github.com/Dyl-M/pycarto/issues"
Changelog = "https://github.com/Dyl-M/pycarto/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    { include-group = "test" },
    "mypy==2.0.0",
    "ruff==0.15.12",
    "types-shapely==2.1.0.20260508"
]
test = [
    "coverage==7.13.5",
    "pytest==9.0.3",
    "pytest-regressions==2.10.0"
]

# --- Ruff ---

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "F", # pyflakes
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "I", # isort
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
    "D", # pydocstyle
    "N", # pep8-naming
    "ANN", # flake8-annotations
    "S", # flake8-bandit (security)
    "T20", # flake8-print
    "PT", # flake8-pytest-style
    "RET", # flake8-return
    "TCH", # flake8-type-checking
]
ignore = [
    "D104", # missing docstring in public package
    "RUF022", # __all__ sorting (we use comment-grouped entries)
]

[tool.ruff.lint.per-file-ignores]
"_tests/**" = ["ANN", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["pycarto"]
force-sort-within-sections = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

# --- Mypy ---

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["geopandas.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["topojson.*"]
ignore_missing_imports = true

# --- Pytest ---

[tool.pytest.ini_options]
testpaths = ["_tests"]
pythonpath = ["."]
addopts = "-v --strict-markers --tb=short"
markers = [
    "network: opt-in tests that fetch Natural Earth 1:50m over the network",
]

# --- Coverage ---

[tool.coverage.run]
source = ["pycarto"]
omit = ["_tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 95
